# kd

./: .gitignore  README.md  build.sh  deploy.sh  dummy.nix  flake.nix  image.nix  input.nix  kernel-build.nix  kernel-config.nix  lib.nix  notes.md  run-image.nix  run.sh  runner.nix  runner.sh  system.nix  vm.nix  xfsprogs.nix
dev/: update.sh
devshells/: default.nix
initrd/: default.nix
kconfigs/: config-debug-v6.16-rc5  config-debug-v6.16-rc7  config-debug-v6.17  config-debug-v6.17-rc6  config-debug-v6.18  config-debug-v6.18-rc1  config-debug-v6.18-rc3  config-debug-v6.18-rc4  config-debug-v6.18-rc7  config-debug-v6.19  config-debug-v6.19-rc1  config-debug-v6.19-rc2  config-debug-v6.19-rc3  config-debug-v6.19-rc6  config-debug-v6.19-rc7  config-debug-v7.0  config-debug-v7.0-rc2  config-debug-v7.0-rc3  config-debug-v7.0-rc4  config-debug-v7.0-rc6  config-debug-v7.0-rc7  config-debug-v7.1  config-debug-v7.1-rc3  config-debug-v7.1-rc4  config-debug-v7.1-rc7  config-debug-v7.2-rc1  config-image-v6.19  config-image-v7.0  config-image-v7.0-rc2  config-image-v7.0-rc3  config-image-v7.0-rc4  config-image-v7.0-rc6  config-image-v7.0-rc7  config-image-v7.1  config-image-v7.1-rc3  config-image-v7.1-rc4  config-image-v7.1-rc7  (+42 more)
kd/: .envrc  .kd.toml  Cargo.toml  build.rs  default.nix  derivation.nix  flake.nix
kd/completions/: _kd  _kd.ps1  kd.bash  kd.elv  kd.fish
kd/src/: cli.rs  common.rs  config.rs  config.tmpl  lib.rs  main.rs  uconfig.tmpl  utils.rs
kd/tests/: config.rs  main.rs
kd/tests/assets/: config.toml  corrupted.toml  xfstests-no-repo.toml
(+25 files in other folders)
