[package]
name = "kd"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"

[build-dependencies]
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "*"
